# nonebot-plugin-ai-timetable

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_ai_timetable/: __init__.py  config.py  data_manager.py  manager.py  model.py  reminder.py  utils.py
nonebot_plugin_ai_timetable/migrations/: 716d05503991_init.py  f67eb52d6a0f_init.py
