[tool.poetry]
name = "nonebot-plugin-ai-timetable"
version = "0.1.7"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_ai_timetable"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc1"
nonebot-adapter-onebot = "^2.1.0"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-htmlrender="^0.2.0"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
